--- a/views/bulksrtload.ejs
+++ b/views/bulksrtload.ejs
@@ -9,8 +9,10 @@
 
   <script type="text/javascript" src="/javascripts/vendors/FileSaver.js"></script>
   <script type="text/javascript" src="/javascripts/js/import-export.js"></script>
+  <script src="//en.wikipedia.org/w/index.php?title=User:Cacycle/diff.js&action=raw&ctype=text/javascript"></script>
   <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
   <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+
    -->
 
   <script>
@@ -143,7 +145,7 @@
         <div class="col-lg-6"></div>
     </div> -->
 
-
+<div id='inputA'></div>
     <tbody id="test">
 
       <!-- <tr id="rowTemplate" hidden>
