--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,15 +24,21 @@ margin-bottom: 10px;
 
 .element { transform: translate(0, 0%);
 }
-.container{
-
- 
-
+.container-fluid{
+padding: 1em;
+background-color: #EEEEEE;
+clear: both;
+margin-left: auto;
+margin-right: auto;
+display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    max-width: 100%;
 }
 * Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
+  
   margin-bottom: 20px;
   height: 30px;
 
@@ -50,7 +56,15 @@ padding-left: 0!important;
   font-size: 14px;
 
 }
+.navbar-default .navbar-nav>li>a{
+  color: #222831;
+}
 
+.navbar-default .navbar-nav>li>a:hover{
+  color: #222831;
+  border-bottom: 3px;
+  border-color: red;
+}
 /* Style the header links */
 .header a {
   float: left;
@@ -61,12 +75,13 @@ padding-left: 0!important;
   font-size: 14px; 
   line-height: 15px;
   border-radius: 0px;
+ 
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header a.logo {
-  font-size: 15px;
-  font-weight: bold;
+  margin-left: 0;
+  margin-right: 0.5rem;
  
 }
 
@@ -80,6 +95,7 @@ padding-left: 0!important;
 .header a.active {
   background-color: dodgerblue;
   color: white;
+  
 }
 
 /* Float the link section to the right */
@@ -500,8 +516,12 @@ line-height: 2;
 
 font-size: 15px;
 color:#2863A5;
+font-family: "Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
+font-size: 18px;
 
 }
+
+
 
 .nav-btn {
   width: 120px;
