--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -169,10 +169,12 @@ padding-left: 0!important;
 
 div.tooltip {
   position: absolute;
-  text-align: center;
-  width: 130px;
+  text-align: left;
+  width: 150px;
   padding: 2px;
-  font: 12px sans-serif;
+  padding-left: 5px;
+  padding-right: 5px;
+  font: 11px sans-serif;
   background: lightsteelblue;
   border: 0;
   border-radius: 8px;
