csv data pointed corrected

--- a/views/visualise.ejs
+++ b/views/visualise.ejs
@@ -63,14 +63,14 @@
 
 							<div class="container">
 								<div class="fluid-row">
-									<div>
+									<div style="display: none;">
 										<input type="radio" id="v1" name="version" value="1">
 										<label for="v1">V1 - October 2017 - <a
 												href='http://dev.kitab-project.org/passim1017/' target="_blank">SRT/CSV
 												Here</a></label>
 									</div>
 
-									<div>
+									<div style="display: none;>
 										<input type="radio" id="v2" name="version" value="2">
 										<label for="v2">V2 - January 2019 - <a
 												href='http://dev.kitab-project.org/passim01022020/'
@@ -96,6 +96,7 @@
 						</div>
 					</li>
 					<li class="list-group-item">
+						
 						<div class="row toggle row-header" id="dropdown-detail-2" data-toggle="detail-2">
 
 							<div class="col-lg-10 panel-title">
