tooltip text changed

--- a/views/visualise.ejs
+++ b/views/visualise.ejs
@@ -70,7 +70,7 @@
 												Here</a></label>
 									</div>
 
-									<div style="display: none;>
+									<div style="display: none;">
 										<input type="radio" id="v2" name="version" value="2">
 										<label for="v2">V2 - January 2019 - <a
 												href='http://dev.kitab-project.org/passim01022020/'
